# hatiko_techn

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
app/: config.py  ioc.py
app/bot/: handler.py  middleware.py  run.py
app/fastapi/: exception.py  main.py
app/fastapi/infrastructure/: imei_checker.py
app/fastapi/routers/: imei.py
app/fastapi/schemas/: imei.py
docker_compose/: bot.yaml  fastapi.yaml
